--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_cache_manager: ^3.3.1
+  share_plus: ^10.0.0
+  gal: ^2.3.0
 
 dev_dependencies:
   flutter_test:
