--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   share_plus: ^10.0.0
   gal: ^2.3.0
+  shared_preferences: ^2.2.0
+  url_launcher: ^6.1.12
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
